--- a/main.html
+++ b/main.html
@@ -8,6 +8,36 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<!-- Navigation Bar -->
+  <nav role="navigation">
+    <ul role="list">
+      <li role="listitem"><a href="#about">About</a></li>
+      <li role="listitem"><a href="#skills">Skills</a></li>
+      <li role="listitem"><a href="#projects">Projects</a></li>
+    </ul>
+  </nav>
+
+  <!-- Heading -->
+  <h1 role="heading">Your Name</h1>
+
+  <!-- Image -->
+  <img src="your-image.jpg" alt="Profile picture of Your Name" role="img" width="200">
+
+  <!-- Brief Description -->
+  <section id="about">
+    <p>Hello! I'm a web developer with a passion for creating accessible and user-friendly applications.</p>
+  </section>
+
+  <!-- Skills List -->
+  <section id="skills">
+    <h2 role="heading">Skills</h2>
+    <ul role="list">
+      <li role="listitem">HTML & CSS</li>
+      <li role="listitem">JavaScript & React</li>
+      <li role="listitem">Java & Spring Boot</li>
+    </ul>
+  </section>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
